Set image name from `ogdc-service` to `ogdc-runner`
Will plan to address how we want to split things up later - for now,
`ogdc-runner` will be used for ogdc shell workflow commands and the service

--- a/helm/examples/values-local-cluster-ogdc-example.yaml
+++ b/helm/examples/values-local-cluster-ogdc-example.yaml
@@ -103,6 +103,6 @@ minio:
 # Ensures that local image of ogdc-service is used.
 # TODO: make deployment tag and this config dependent on env
 image:
-  repository: ogdc-service
+  repository: ogdc-runner
   tag: local
   pullPolicy: Never
