--- a/helm/examples/values-dev-cluster-ogdc-example.yaml
+++ b/helm/examples/values-dev-cluster-ogdc-example.yaml
@@ -124,6 +124,6 @@ minio:
 # Ensures that local image of ogdc-service is used.
 # TODO: make deployment tag and this config dependent on env
 image:
-  repository: ogdc-service
+  repository: ogdc-runner
   tag: latest
   pullPolicy: Always
