Add image settings for prod cluster config

--- a/helm/examples/values-prod-cluster-ogdc-example.yaml
+++ b/helm/examples/values-prod-cluster-ogdc-example.yaml
@@ -120,3 +120,7 @@ minio:
     existingClaim: "cephfs-qgnet-ogdc-minio-pvc"
 
   existingSecret: *passwordSecretName
+
+image:
+  repository: ogdc-runner
+  tag: latest
