--- a/helm/examples/values-dev-cluster-ogdc-example.yaml
+++ b/helm/examples/values-dev-cluster-ogdc-example.yaml
@@ -81,7 +81,7 @@ argo-workflows:
       pathType: ImplementationSpecific
       ## -- Ingress service backend configuration
       ## This is the port for the argo server service.
-      servicePort: 2746
+      servicePort: 8000
       ## -- Ingress TLS configuration
       ## Add TLS configuration for the Ingress, if desired.
       ## This example assumes you have created a TLS secret named
@@ -123,6 +123,8 @@ minio:
 
 # Ensures that local image of ogdc-service is used.
 image:
-  repository: ogdc-runner
+  repository: "ghcr.io/qgreenland-net/ogdc-runner"
   tag: latest
   pullPolicy: Always
+
+environment: "dev"
