--- a/helm/examples/values-local-cluster-ogdc-example.yaml
+++ b/helm/examples/values-local-cluster-ogdc-example.yaml
@@ -96,7 +96,7 @@ minio:
 # Ensures that local image of ogdc-service is used.
 image:
   repository: "ogdc-runner"
-  tag: local
+  tag: latest
   pullPolicy: Never
 
 environment: "local"
