--- a/helm/examples/values-local-cluster-ogdc-example.yaml
+++ b/helm/examples/values-local-cluster-ogdc-example.yaml
@@ -100,3 +100,6 @@ image:
   pullPolicy: Never
 
 environment: "local"
+
+# Use fastapi dev server for local dev
+ogdc_service_command: ". ./.venv/bin/activate && fastapi dev --port 8000 --host 0.0.0.0 src/ogdc_runner/service.py"
