--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -277,3 +277,6 @@ minio:
 image:
   repository: ogdc-runner
   tag: latest
+
+# Default to production fastapi run command
+ogdc_service_command: ". ./.venv/bin/activate && fastapi run --port 8000 --host 0.0.0.0 src/ogdc_runner/service.py"
