--- a/helm/templates/pg-service.yaml
+++ b/helm/templates/pg-service.yaml
@@ -11,3 +11,16 @@ spec:
       targetPort: 5432
   selector:
     app: postgres
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: adminer-service
+spec:
+  ports:
+  - port: 8080
+    targetPort: 8080
+  selector:
+    app: adminer
