--- a/helm/admin/workflow-pv.yaml
+++ b/helm/admin/workflow-pv.yaml
@@ -60,4 +60,4 @@ spec:
   #  within /Users/yourname/... if you need access outside of k8s. It may be necessary to chmod 777
   # so the OGDC user can write to it - so be careful! Again, this is for testing/dev only!
   hostPath:
-    path: ${OGDC_PV_HOST_PATH}/workflows
+    path: ${OGDC_PV_HOST_PATH}
