Update docs/chart for CNPG

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -55,12 +55,12 @@ portForward:
     localPort: 2746
   # Expose postgresql at port 5432
   - resourceType: service
-    resourceName: postgres-service
+    resourceName: ogdc-db-cnpg-rw
     namespace: qgnet
     port: 5432
     localPort: 5432
   # Expose adminer at port 9090 (8080 is for docs)
-  # Use: http://localhost:9090/?pgsql=postgres-service&username=admin&db=ogdc
+  # Use: http://localhost:9090/?pgsql=ogdc-db-cnpg-rw&username=admin&db=ogdc
   # Connect to the postgres database with params:
   #   * System: Postgresql
   #   * Server: postgresql-service
