--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -37,3 +37,14 @@ spec:
         - name: "ARGO_WORKFLOWS_SERVICE_URL"
           # http://qgnet-ogdc-argo-workflows-server.qgnet.svc.cluster.local:2746
           value: "http://{{ .Release.Name }}-argo-workflows-server.{{ .Release.Namespace }}.svc.cluster.local:2746"
+        # OGDC DB username/password
+        - name: OGDC_DB_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: "ogdc-db-postgres-secrets"
+              key: username
+        - name: OGDC_DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: "ogdc-db-postgres-secrets"
+              key: password
