Postgresql DB: Use non-ephemeral storage for dev/prod servers

--- a/helm/admin/db-cluster-values.yaml
+++ b/helm/admin/db-cluster-values.yaml
@@ -9,5 +9,5 @@ existingSecret: "ogdc-db-postgres-secrets"
 dbName: ogdc
 dbUser: admin
 persistence:
-  storageClass: csi-cephfs-sc-ephemeral
+  storageClass: csi-cephfs-sc
   size: 1Gi
