Add OGDC_JWT_SECRET_KEY envvar

--- a/helm/admin/ogdc-api-secrets.yaml
+++ b/helm/admin/ogdc-api-secrets.yaml
@@ -36,6 +36,9 @@ stringData:
   # Change these values to your desired passwords
   # This value used as the password for the API admin user
   OGDC_ADMIN_PASSWORD: "password"
+  # to get a string like this run:
+  # openssl rand -hex 32
+  OGDC_JWT_SECRET_KEY: "2ae25b5398824129235724f243811d7a335a98339abe4630e4e27d25e4f144a2"
 
 ## @param data
 ## Contains the secret data. The serialized form of the secret data is a base64 encoded string,
