API secrets: Remove `ogdc` from secret name
We expect the RELEASE_NAME to be `qgnet-ogdc`

--- a/helm/admin/ogdc-api-secrets.yaml
+++ b/helm/admin/ogdc-api-secrets.yaml
@@ -22,7 +22,7 @@ metadata:
   ##  IMPORTANT:
   ##  EDIT THIS TO SUBSTITUTE YOUR RELEASE NAME
   #######################################################################
-  name: ${RELEASE_NAME}-ogdc-api-secrets
+  name: ${RELEASE_NAME}-api-secrets
 
 type: Opaque
 
