--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
           name: ogdc-api-port
         envFrom:
         - secretRef:
-            name: "{{ .Release.Name }}-ogdc-api-secrets"
+            name: "{{ .Release.Name }}-api-secrets"
         env:
         - name: "ENVIRONMENT"
           value: {{ .Values.environment }}
