--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -58,3 +58,10 @@ spec:
             secretKeyRef:
               name: "{{ .Release.Name }}-secrets"
               key: rootPassword
+        - name: "INTERNAL_S3_ENDPOINT_URL"
+          value: "{{ .Values.internal_s3_endpoint_url }}"
+        - name: "PUBLIC_S3_ENDPOINT_URL"
+          value: "{{ .Values.public_s3_endpoint_url }}"
+        # The root path that the API expects to live under
+        - name: "API_ROOT_PATH"
+          value: "/ogdc/api"
