--- a/helm/examples/values-prod-cluster-ogdc-example.yaml
+++ b/helm/examples/values-prod-cluster-ogdc-example.yaml
@@ -126,3 +126,8 @@ image:
   tag: latest
 
 environment: "prod"
+
+# This is the URL at which the s3 service is exposed at.
+# TODO: setup ingress
+internal_s3_endpoint_url: "http://qgnet-ogdc-minio:9000"
+public_s3_endpoint_url: "http://localhost:9000"
