--- a/helm/examples/values-prod-cluster-ogdc-example.yaml
+++ b/helm/examples/values-prod-cluster-ogdc-example.yaml
@@ -80,7 +80,7 @@ argo-workflows:
       ## Ref: https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
       pathType: ImplementationSpecific
       ## -- Ingress service backend configuration
-      ## This is the port for the argo server service.
+      ## This is the port for the ogdc service
       servicePort: 8000
       ## -- Ingress TLS configuration
       ## Add TLS configuration for the Ingress, if desired.
